# torrentfileQt

./: .deepsource.toml  .gitignore  .markdownlint.json  .prospector.yml  .pylintrc  CHANGELOG.md  LICENSE  MANIFEST.in  Makefile  README.md  app.spec  codacy.sh  coverage.xml  main.py  mkdocs.yml  package.json  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.codacy-coverage/13.5.0/: codacy-coverage-reporter-assembly.jar.SHA512SUM
.github/workflows/: CI.yml  testing.yml  workflow.yml
docs/: 404.html  index.html  sitemap.xml
docs/CHANGELOG/: index.html
docs/search/: search_index.json
templates/: CHANGELOG.md  LICENSE  index.md
templates/css/: styles.css
tests/: __init__.py  context.py  test_bencodetab.py  test_checktab.py  test_createTab.py  test_editortab.py  test_edittab.py  test_gui.py  test_infotab.py  test_magnettab.py  test_menu.py  test_titlebar.py  test_toolTab.py  test_tooltab.py  test_utils.py  test_x_context.py
tests/alt/: profiles.json
torrentfileGUI/: __init__.py  __main__.py  checkTab.py  check_tab.py  createTab.py  create_tab.py  infoTab.py  info_tab.py  menu.py  qss.py  widgets.py  window.py
torrentfileQt/: __init__.py  __main__.py  bencodeTab.py  catalogTab.py  checkTab.py  createTab.py  editTab.py  editorTab.py  infoTab.py  magnetTab.py  menu.py  qss.bak  qss.py  qss.py.bak  qss2.py  rebuildTab.py  style.py  titleBar.py  toolTab.py  treetab.py  treewidget.py  utils.py  version.py  widgets.py  window.py  window2.py
