[wheel]
universal = 1

[metadata]
name = TorrentFileQt
version = file: torrentfileQt/version.py
long_description = file: README.md
long_description_content_type = text/markdown
author = alexpdev
url = https://github.com/alexpdev/TorrentfileQt
author_email = alexpdev@protonmail.com
license = file: LICENSE

[options]
python_requires = >=3.6
install_requires =
    setuptools
    wheel
    torrentfile
    PySide6
    pyben
include_package_data=True
