[metadata]
name = TorrentFileQt
version = 0.3.6
long_description = file: README.md
long_description_content_type = text/markdown
description = GUI based tool for creating Bittorrent files.
keywords = GUI, Bittorrent, metafile, Qt
author = alexpdev
url = https://github.com/alexpdev/TorrentfileQt
author_email = alexpdev@protonmail.com
license = Apache Software License
classifiers =
    Development Status :: 4 - Beta
    Operating System :: OS Independent
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: Apache Software License


[options]
packages = find:
python_requires = >=3.6
install_requires =
    setuptools
    wheel
    torrentfile
    PySide6
    pyben
include_package_data=True
